--- a/create-micro-manifest.html.md.erb
+++ b/create-micro-manifest.html.md.erb
@@ -24,7 +24,7 @@ For example:
 name: microbosh-test
 </pre>
 
-After that, there are five required _blocks_:
+After that, there are five required blocks:
 
 * [logging](#logging)
 * [network](#network)
