add bosh-packages.html and add index entry

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -39,6 +39,7 @@ Run `bosh help --all` to see all available BOSH commands.
 ## <a id="deep"></a> BOSH in Depth ##
 
 * [Creating a BOSH Release](./create-release.html)
+* [Creating BOSH Packages](./bosh-packages.html)
 * [Creating a MicroBOSH Deployment Manifest](./create-micro-manifest.html)
 * [Understanding the BOSH Deployment Manifest](./deployment-manifest.html)
 * [Sample BOSH Deployment Manifest](./sample-manifest.html)
