--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -30,7 +30,9 @@ The [BOSH Command Line Interface (CLI)](bosh-cli.html) is the primary operator
 interface to BOSH.
 Run `bosh help --all` to see all available BOSH commands.
 
-* [Setting Up your IaaS for BOSH](./iaas-setup.html)
+* [Setting Up AWS for BOSH](./setup-aws.html)
+* [Setting Up OpenStack for BOSH](./setup-openstack.html)
+* [Setting Up vSphere for BOSH](./setup-vsphere.html)
 * [Deploying MicroBOSH](./deploy-microbosh.html)
 * [Deploying MicroBOSH to AWS](./deploy-microbosh-to-aws.html)
 * [Deploying MicroBOSH to OpenStack](./deploy-microbosh-to-openstack.html)
