--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -41,7 +41,7 @@ Run `bosh help --all` to see all available BOSH commands.
 ## <a id="deep"></a> BOSH in Depth ##
 
 * [Creating a BOSH Release](./create-release.html)
-* [Creating BOSH Packages](./bosh-packages.html)
+* [Creating BOSH Packages](./packages.html)
 * [Creating a MicroBOSH Deployment Manifest](./create-micro-manifest.html)
 * [Understanding the BOSH Deployment Manifest](./deployment-manifest.html)
 * [Sample BOSH Deployment Manifest](./sample-manifest.html)
@@ -50,4 +50,3 @@ Run `bosh help --all` to see all available BOSH commands.
 * [BOSH Commands for System Administration](./sysadmin-commands.html)
 * [Disaster Recovery with BOSH](./disaster-recovery.html)
 * [Connecting BOSH or MicroBOSH to an External Postgres Database](./connect-postgres-hadb.html)
-* [Understanding a BOSH Package](./packages.html)
