fix note formatting in setup-aws.html

--- a/setup-aws.html.md.erb
+++ b/setup-aws.html.md.erb
@@ -102,10 +102,10 @@ your configuration.
 	The values shown correspond to the earlier Route 53 **cloud.example.com**
 	example.
 
-    <p class="note"><strong>Note</strong>: `BOSH_VPC_DOMAIN` and
-	`BOSH_VPC_SUBDOMAIN` must correspond to the domain name you set up when you
-	configured Route 53. The only supported value for `BOSH_AWS_REGION` is
-	`us-east-1`.</p>
+    <p class="note"><strong>Note</strong>: <code>BOSH_VPC_DOMAIN</code> and
+	<code>BOSH_VPC_SUBDOMAIN</code> must correspond to the domain name you set 
+	up when you configured Route 53. The only supported value for 
+	<code>BOSH_AWS_REGION</code> is <code>us-east-1</code>.</p>
 
     ```
 	export BOSH_VPC_DOMAIN=example.com
