Correcting formatting to work with pdf

--- a/deploy-microbosh-to-openstack.html.md.erb
+++ b/deploy-microbosh-to-openstack.html.md.erb
@@ -228,7 +228,7 @@ information:
     * OPENSTACK-USERNAME
 
     <br/ >
-	<p class="note">**Note**: See the [OpenStack documentation](http://docs.openstack.org/) for help finding this information.</p>
+	<p class="note"><strong>Note</strong>: See the <a href="http://docs.openstack.org/">OpenStack documentation</a> for help finding this information.</p>
 
 The MicroBOSH deployment manifest template:
 
@@ -330,7 +330,8 @@ downloaded stemcell.
 	Conventionally, 'bosh-deployments.yml' should be saved in ~/workspace.
 	Is ~/workspace/deployments a directory where you can save state? (type 'yes' to continue): yes
 
-	Deploying new micro BOSH instance ~/workspace/deployments/openstack-microbosh.yml to 'https://54.86.66.111:25555' (type 'yes' to continue): yes
+	Deploying new micro BOSH instance ~/workspace/deployments/openstack-microbosh.yml to 'https://54.86.66.111:25555'
+	(type 'yes' to continue): yes
 	  Started deploy micro bosh
 	  ...
 	  Done deploy micro bosh
