--- a/bosh-components.html.md.erb
+++ b/bosh-components.html.md.erb
@@ -112,6 +112,6 @@ from the BOSH Registry.
 1. The BOSH Registry responds with the IP addresses and IDs.
 1. The Agent uses the IP addresses and IDs to configure the VM.
 
-**Note**: vSphere does not use the BOSH Registry.
+<p class="note"><strong>Note</strong>: vSphere does not use the BOSH Registry.
 Instead, BOSH attaches a CD-ROM ISO image with the necessary information to each
-vSphere VM.
+vSphere VM.</p>
