--- a/workflow.html.md.erb
+++ b/workflow.html.md.erb
@@ -43,7 +43,7 @@ Some benefits of using multi-VM BOSH over MicroBosh:
  * Easy access to BOSH VMs using `bosh ssh` and BOSH logs
  * Easy monitoring of CPU, disk, and RAM on BOSH VMs using `bosh vms --vitals`
 
-**Note**: As shown in the illustration, deploying Multi-VM BOSH is optional.
+<p class="note"><strong>Note</strong>: As shown in the illustration, deploying Multi-VM BOSH is optional.</p>
 
 To deploy BOSH using MicroBOSH you must:
 
@@ -72,8 +72,8 @@ You obtain a stemcell from the [public download site](http://bosh-artifacts.cfap
 * A **manifest** that accounts for environmental constraints and specifies how you want to orchestrate your deployment.
 You can modify an example manifest to suit your purposes, or use a tool like spiff to create a manifest.
 
-**Note**: This topic speaks of "a release" and "a stemcell" for the sake of simplicity,
-but BOSH also supports deploying with multiple releases and multiple stemcells.
+<p class="note"><strong>Note</strong>: This topic speaks of "a release" and "a stemcell" for the sake of simplicity,
+but BOSH also supports deploying with multiple releases and multiple stemcells.</p>
 
 ### <a id="deploy"></a> The Pattern for Deploying Software with BOSH  ###
 
