Add documentation for BOSH drain scripts.

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -50,3 +50,4 @@ Run `bosh help --all` to see all available BOSH commands.
 * [BOSH Commands for System Administration](./sysadmin-commands.html)
 * [Disaster Recovery with BOSH](./disaster-recovery.html)
 * [Connecting BOSH or MicroBOSH to an External Postgres Database](./connect-postgres-hadb.html)
+* [Drain Scripts](./drain-scripts.html)
