--- a/job-logs.html.md.erb
+++ b/job-logs.html.md.erb
@@ -140,7 +140,7 @@ $ run errand SampleErrand --download-logs --logs-dir ~/workspace/SampleLogDirect
 ##<a id="log-rotation"></a>Log Rotation ##
 
 BOSH manages log rotation with the [Logrotate](http://linuxconfig.org/logrotate)
-log file management utility. BOSH instructs Logrotate to act on all .log files in the `/var/vcap/sys/log/`, `/var/vcap/sys/log/*/`, and `/var/vcap/sys/log/*/*/` directories.
+log file management utility. BOSH instructs Logrotate to act on all `.log` files in the `/var/vcap/sys/log/`, `/var/vcap/sys/log/*/`, and `/var/vcap/sys/log/*/*/` directories.
 
 Logrotate runs automatically with the following non-configurable settings:
 
