edit persistent disk topic

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -52,3 +52,4 @@ Run `bosh help --all` to see all available BOSH commands.
 * [Using BOSH Snapshots with Your IaaS](./snapshots.html)
 * [Connecting BOSH or MicroBOSH to an External Postgres Database](./connect-postgres-hadb.html)
 * [Drain Scripts](./drain-scripts.html)
+* [Persistent Disks](./persistent-disks.html)
