--- a/persistent-disks.html.md.erb
+++ b/persistent-disks.html.md.erb
@@ -2,31 +2,42 @@
 title: Persistent Disks
 ---
 
-Certain deployment jobs require to store data that should not be deleted when VM 
-is stopped, recreated, or deleted.
+Some BOSH jobs in a deployment require persistent disk data.
 
-Persistent disks are kept when deployment job:
+If you attach a persistent disk to a virtual machine and then stop, terminated,
+or delete the VM, your persistent disk data remains intact.
+Attaching the persistent disk to another VM allows you to access your data.
 
-* is updated with new stemcell
-* is accidently deleted from the IaaS and later is recreated
-* is stopped
+Persistent disks are kept for deployment jobs under the following circumstances:
 
-Persistent disks are deleted when deployment job:
+* When updated with new stemcells
+* If accidentally deleted from the IaaS and later recreated
+* When stopped
 
-* stops specifying persistent disk size or a disk pool
-* is scaled down via instances declaration (only disks associated with removed instances will be deleted)
-* is implictly renamed in the deployment maniefst
-* is deleted from the deployment manifest
+Persistent disks are deleted for deployment jobs under the following
+circumstances:
 
-You can specify that a deployment job needs a persistent disk attachment in one of two ways: 
-via persistent\_disk declaration or via persistent\_disk_pool declaration.
+* When no longer specifying a persistent disk size or a disk pool
+* When scaled down. Note: Applies only to disks associated with removed
+	instances
+* When implicitly renamed in the deployment manifest
+* When deleted from the deployment manifest
 
+You can specify that a deployment job needs an attached persistent disk in one
+of two ways:
 
-## <a id='persistent-disk'></a>persistent_disk Declaration ##
+* [Persistent Disk declaration](#persistent-disk)
+* [Persistent Disk Pool declaration](#persistent-disk-pool)
 
-**persistent_disk** [Integer, optional]: Specifies the persistent disk size; 
-defaults to 0 (no persistent disk). If persistent_disk is a positive integer, 
-BOSH creates a persistent disk of that size in megabytes and attaches it to each job instance VM.
+## <a id='persistent-disk'></a>Persistent Disk Declaration ##
+
+To specify that a deployment job needs an attached persistent disk, add a `persistent_disk` key-value pair to job in the
+[Jobs](deployment-manifest.html#jobs) block of your deployment manifest.
+
+The `persistent_disk` key-value pair specifies the persistent disk size, and
+defaults to 0 (no persistent disk). If the `persistent_disk` value is a positive
+integer, BOSH creates a persistent disk of that size in megabytes and attaches
+it to each instance VM for the job.
 
 Example:
 
@@ -37,31 +48,27 @@ jobs:
   - {name: redis, release: redis}
   instances: 1
   resource_pool: default
-  persistent_disk: 1_024
+  persistent_disk: 1024
   networks:
   - name: default
 </pre>
 
-Downside to using simple persistent_disk declaration is that you do not have a control over 
-what type of persistent disk will be selected. CPI will pick its default disk configuration.
+<p class="note"><strong>Note</strong>: Persistent disk declaration does not allow you any control over the type of persistent disk attached to your job VMs. Instead, the CPI creates persistent disks using its default disk configuration.</p>
 
+## <a id='persistent-disk-pool'></a>Persistent Disk Pool Declaration ##
 
-## <a id='persistent-disk-pool'></a>persistent\_disk_pool Declaration ##
+To specify that a deployment job needs an attached persistent disk, add a
+[Disk Pool](deployment-manifest.html#disk-pools) block to your deployment manifest.
 
-**persistent\_disk_pool** [String, optional]: Name of the disk pool. A deployment manifest 
-can describe multiple disk pools and uses unique names to identify and reference them.
+The persistent disk pool declaration allows you to specify the precise type and size of the persistent disks attached to your job VMs.
 
-### Disk Pools ###
+A Disk Pool block contains the following key-value pairs:
 
-Similarly to how deployment job can be associated with a VM type via resource\_pool declaration, 
-persistent\_disk_pool declaration allows you to specify precise type and size of the persistent disk.
-
-**disk_pools** [Array, optional]: Array of disk pool declarations
-
+* **persistent\_disk_pool** [String, optional]: Name of the disk pool. A deployment manifest can describe multiple disk pools and uses unique names to identify and reference them.
+* **disk_pools** [Array, optional]: An array of disk pool declarations.
 * **name** [String, required]: A unique name used to identify and reference the disk pool.
 * **disk_size** [Integer, required]: Size of the disk in megabytes.
-* **cloud_properties** [Hash, optional]: Describes any IaaS-specific properties needed to 
-create disk. Examples: `type`, `ops`
+* **cloud_properties** [Hash, optional]: Describes any IaaS-specific properties needed to create disk. Examples: `type`, `ops`
 
 Example:
 
@@ -86,30 +93,25 @@ jobs:
   - name: default
 </pre>
 
-
 ## <a id='checking-stats'></a>Checking Stats ##
 
-After deploy completes `bosh vms --vitals` should start showing percentage values
-in the `Persistent Disk Usage` instead of 'n/a' for deployment job instances 
-that have persistent disk.
+After your deployment completes, run `bosh vms --vitals` from a terminal window to view persistent disk usage percentage values under `Persistent Disk Usage`.
 
+## <a id='accessing-persistent-disk'></a>Accessing Persistent Disks ##
 
-## <a id='accessing-persistent-disk'></a>Accessing on Deployed VMs ##
+You can access persistent disks on deployed VMs through `ssh`. Persistent disks are mounted at `/var/vcap/store`.
 
-On the deployed VMs persistent disk will be mounted at `/var/vcap/store`. 
-By convention each release job (specified via `templates` key in the 
-definition of a deployment job) creates directory by its name 
-(e.g. `/var/vcap/store/redis`) and sets correct permissions.
+By convention each release job, specified via the `templates` key in the
+definition of a deployment job, creates a directory using its name and sets
+correct permissions.
 
+Example: `/var/vcap/store/redis`
 
 ## <a id='changing-persistent-disk'></a>Changing Disk Properties ##
 
-BOSH allows to change disk types &amp; sizes by simply modifying the deployment manifest. 
-As long as the deployment job name stays the same, existing persistent disks will be converted
-to match requested disk type and size.
+BOSH allows you to change disk types and sizes by modifying the deployment manifest. As long as the deployment job name stays the same, existing persistent disks will be converted to match the requested disk type and size.
 
-During the disk migration BOSH Director communicates with BOSH Agent to attach both
-existing and newly created disk to the same VM and copy over the data. After transfer 
-successfully completes BOSH deletes existing disk and keeps new disk attached to the instance.
+During the disk migration from one disk type and size to another, the BOSH Director communicates with the BOSH Agent to attach both existing and newly created disk to the same VM and copy over any existing data. After the transfer
+successfully completes, BOSH deletes the original disk and keeps the new disk attached to the VM instance.
 
-Beware that IaaS might disallow attaching particular disk types &amp; sizes to certain VMs types.
+<p class="note"><strong>Note</strong>: An IaaS might disallow attaching particular disk types and sizes to certain VMs types. Consult your IaaS documentation for more information.</p>
